manifest/memos/deployment-memos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
      - image: neosmemo/memos:stable
        name: memos
        ports:
        - containerPort: 5230
        volumeMounts:
          - name: data
            mountPath: /var/opt/memos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-pvc
