manifest/memos/ingress-memos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: memos.apps.kongkang.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: memos-web
            port:
              number: 5230
